# baibaiAIGC

./: .gitignore  README.md  SKILL.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/src/: main.rs
app/src/components/: DocumentCard.tsx  HistoryCard.tsx  ModelConfigCard.tsx  ResultCard.tsx
app/src/hooks/: useAppState.ts
app/src/lib/: appService.ts  desktopService.ts  tauri.ts  webService.ts
app/src/styles/: global.css
app/src/types/: app.ts
references/: checklist.md  usage.md
scripts/: aigc_records.py  aigc_round_service.py  app_config.py  app_service.py  docx_pipeline.py  llm_client.py  run_aigc_round.py  skill_round_helper.py  web_app.py
